Added dependency injector and setup alembic + pymysql and 'unitofwork' alternative way to implement this using sqlalchemy and added get lessons endpoint

--- a/backend/.env.ci
+++ b/backend/.env.ci
@@ -2,7 +2,10 @@ STAGE=local
 log_level=DEBUG
 BACKEND_CORS_ORIGINS='["*"]'
 
-DB_USER=root
-DB_PASSWORD=password
-DB_HOST=db
-DB_DATABASE=tarifiyt
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_HOST=
+MYSQL_DATABASE=
+MYSQL_ALLOW_EMPTY_PASSWORD=
+
+DB_URL=
