--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -35,7 +35,7 @@ file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(re
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = mysql+pymysql://root:password@db:3306/tarifiyt
 
 prepend_sys_path = .
 
