--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pymysql>=1.1.2",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.43",
+    "typer>=0.19.1",
     "uvicorn>=0.36.0",
 ]
 
