--- a/.github/workflows/commit_and_pr_checks.yml
+++ b/.github/workflows/commit_and_pr_checks.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Setup environment
         run: |
+           cp backend/.env.ci backend/.env
+           cp backend/.env.ci .env
            echo "UV_INDEX_HARBORN_USERNAME=harborn" >> $GITHUB_ENV
            echo "DB_URL=${{ secrets.DB_URL }}" >> $GITHUB_ENV
 
