fix makefile path

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,8 +20,7 @@ ENV UV_COMPILE_BYTECODE=1
 ENV UV_LINK_MODE=copy
 
 # Copy dependencies before installation
-COPY pyproject.toml uv.lock alembic.ini /api/
-COPY ./Makefile /api/
+COPY pyproject.toml uv.lock alembic.ini Makefile /api/
 COPY ./api /api/api
 COPY ./scripts /api/scripts
 COPY ./migrations /api/migrations
