--- a/.github/workflows/commit_and_pr_checks.yml
+++ b/.github/workflows/commit_and_pr_checks.yml
@@ -22,7 +22,7 @@ jobs:
            cp backend/.env.ci backend/.env
            cp backend/.env.ci .env
            echo "UV_INDEX_HARBORN_USERNAME=harborn" >> $GITHUB_ENV
-           echo "DB_URL=${{ secrets.DB_URL }}" >> $GITHUB_ENV
+           echo "export DB_URL=${{ secrets.DB_URL }}" >> $GITHUB_ENV
 
       - name: Code Quality & Tests
         run: make ci-backend
